--- a/blogPost/package.json
+++ b/blogPost/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
+    "express": "^4.21.2",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "react": "^19.0.0",
